Power menu alignment issue

--- a/yasb/styles.css
+++ b/yasb/styles.css
@@ -96,7 +96,7 @@
   color: rgba(244, 71, 71, 0.55);  
 }
 .power-menu-popup .button.lock .icon {
-  padding-right: 12px;
+  padding-right: 10px;
   color: rgba(78, 201, 176, 0.55);
 }
 .power-menu-popup .button.lock .label {
